# eda-server-prototype

./: .dockerignore  .gitignore  .pre-commit-config.yaml  INSTALL.md  MANIFEST.in  Makefile  README-API.md  README-DATABASE.md  README-POSTGRES.md  README.md  RULES.md  Taskfile.yaml  alembic.ini  pyproject.toml  requirements.txt  requirements_codegen.txt  requirements_dev.txt  requirements_lint.txt  requirements_test.txt  run_server.py  setup.cfg  setup.py  tox.ini
.github/workflows/: container-image.yml  linters.yml  test-docker-deployment.yml  tests.yml  ui-pr-test.yml
ansible_events_ui/: __init__.py  api.py  app.py  app_factory.py  auth.py  conf.py  config.py  database.py  key.py  main.py  manager.py  managers.py  messages.py  models.py  project.py  rbac.py  ruleset.py  schemas.py  types.py  users.py
ansible_events_ui/api/: __init__.py  activation.py  audit_rule.py  auth.py  job.py  project.py  role.py  rule.py  rulebook.py  ssh.py  task.py  user.py  websocket.py
ansible_events_ui/db/: models.py  provider.py  session.py
ansible_events_ui/db/migrations/: env.py  script.py.mako
ansible_events_ui/db/models/: __init__.py  activation.py  auth.py  base.py  job.py  mixins.py  project.py  rulebook.py  user.py
ansible_events_ui/db/utils/: common.py  lostream.py  migrations.py
ansible_events_ui/schema/: __init__.py  activation.py  audit_rule.py  extra_vars.py  inventory.py  job.py  playbook.py  project.py  role.py  rulebook.py
designs/: models.yml
eda_server/: config.py  main.py  project.py  ruleset.py  users.py
eda_server/api/: __init__.py  activation.py  job.py  project.py  rulebook.py
eda_server/db/migrations/: env.py
scripts/: adduser.py  createuser.sh  eda.sh  eda_dev.sh  eda_kube.sh  load_data.py  version_check.sh
scripts/common/: logging.sh  utils.sh
src/ansible_events_ui/: app.py  key.py  managers.py  project.py  users.py
src/ansible_events_ui/api/: activation.py  project.py
src/eda_server/: app.py  auth.py  batch.py  config.py  key.py  main.py  managers.py  messages.py  project.py  ruleset.py  types.py  users.py
src/eda_server.egg-info/: requires.txt
src/eda_server/api/: __init__.py  activation.py  audit_rule.py  auth.py  inventory.py  job.py  project.py  role.py  rulebook.py  ssh.py  task.py  user.py  websocket.py
src/eda_server/config/: __init__.py  enums.py  logging.yaml
src/eda_server/db/: dependency.py  provider.py  session.py
src/eda_server/schema/: __init__.py  activation.py  audit_rule.py  extra_vars.py  inventory.py  job.py  message.py  meta.py  playbook.py  project.py  query_param.py  role.py  rulebook.py  user.py
src/eda_server/utils/: subprocess.py
tests/: conftest.py  test_1.py  test_xfail.py
tests/integration/: conftest.py  test_api.py  test_auth.py  test_root_handlers.py
tests/integration/api/: conftest.py  test_activation.py  test_audit_rule.py  test_extra_vars.py  test_inventory.py  test_job.py  test_large_object.py  test_playbook.py  test_project.py  test_role.py  test_rule.py  test_rulebook.py  test_ruleset.py  test_task.py  test_user.py
tests/integration/utils/: app.py  db.py
tests/system/: test_project.py
tests/utils/: app.py  db.py
tools/: extract_model_design.py  initial_data.yml
tools/certs/: wildcard.crt  wildcard.csr  wildcard.key
tools/deploy/: kustomization.yaml
tools/deploy/eda-frontend/: deployment.yaml  kustomization.yaml  service.yaml
tools/deploy/eda-server/: deployment.yaml  kustomization.yaml  service.yaml
tools/deploy/events-ui/: deployment.yaml  kustomization.yaml  service.yaml
tools/deploy/postgres/: deployment.yaml  kustomization.yaml  service.yaml
tools/docker/: Dockerfile  docker-compose.yml
tools/docker/nginx/: Dockerfile  default.conf
ui/: .eslintrc  babel.config.json  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.dev.js
ui/config/: test-setup.js  webpack.common.js  webpack.dev.js  webpack.prod.js
ui/src/: frontend-components.d.ts  global-styles.js  index.html  index.tsx
(+304 files in other folders)
