[metadata]
name = ansible_events_ui
version = 0.1.0
author = Ben Thomasson
author_email = ben.thomasson@gmail.com
url = https://github.com/benthomasson/ansible-events-ui
license = Apache-2.0

[options]
zip_safe = False
include_package_data = True
packages = find:

python_requires = >=3.6
install_requires =
    alembic
    fastapi
    fastapi-users[sqlalchemy]
    pyyaml
    requests
    sqlalchemy ~= 1.4
    uvicorn
    websockets  # TODO(cutwater): Check if this is dependency is necessary
    environs
    ansible-events @ git+https://github.com/benthomasson/ansible-events.git

[options.extras_require]
sqlite =
    aiosqlite
psql =
    asyncpg

[options.entry_points]
# TODO(cutwater): Maybe rename it as ansible-events-api \ ansible-events-server?
console_scripts =
    ansible-events-ui = ansible_events_ui.main:main


[flake8]
extend-exclude = docs, ui
# show-source = True
# Flake8 default ignore list:
# ['W504', 'B904', 'B901', 'E24', 'W503', 'B950', 'E123', 'E704', 'B903', 'E121', 'B902', 'E226', 'E126']
extend-ignore =
    E203,  #  Whitespace before ':' (false positive in slices, handled by black.
           #  see: https://github.com/psf/black/issues/315)
