[metadata]
name = eda-server
version = 0.1.0
author = Red Hat, Inc.
author_email = ben.thomasson@gmail.com
url = https://github.com/ansible/eda-server
license = Apache-2.0

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src

python_requires = >=3.6
install_requires =
    alembic
    asyncpg
    fastapi
    fastapi-users[sqlalchemy]
    pyyaml
    sqlalchemy ~= 1.4
    uvicorn
    websockets  # TODO(cutwater): Check if this is dependency is necessary
    environs
    aiodocker
    ansible-events

[options.packages.find]
where = src

[options.entry_points]
# TODO(cutwater): Maybe rename it as ansible-events-api \ ansible-events-server?
console_scripts =
    eda-server = eda_server.main:main


[flake8]
extend-exclude = docs, ui, ./.venv
# show-source = True
# Flake8 default ignore list:
# ['W504', 'B904', 'B901', 'E24', 'W503', 'B950', 'E123', 'E704', 'B903', 'E121', 'B902', 'E226', 'E126']
extend-ignore =
    E203,  #  Whitespace before ':' (false positive in slices, handled by black.
           #  see: https://github.com/psf/black/issues/315)
    D1,    #  Missing docstrings errors
extend-immutable-calls =
    Depends
# Fix pep8-naming: False positive N805 when running against `pydantic.validator`.
#   See https://github.com/PyCQA/pep8-naming/issues/169
classmethod-decorators =
    classmethod
    validator
